# aiko-chat-island

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.build.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: bus-e2e.yml  ci.yml  ghcr-retention.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_role_joinpolicy_check.py  0003_device_tokens.py  0004_oauth_handoffs.py  0005_oauth_states.py  0006_oauth_state_app_challenge.py  0006_social_nonces.py  0007_oauth_state_app_challenge.py  0008_passkey.py  0009_communities.py  0010_community_default_channel.py  0011_message_origin.py  0012_signing_keys.py  0013_social_recovery.py
deploy/: mosquitto.conf  standup.sh  update.sh
deploy/caddy/: Caddyfile  docker-compose.caddy.yml
docs/: deploy-passkeys-runbook.md  handoff-app-auth.md  index.html  island-vs-gateway.md  standup-guide.md
docs/design/: 01-channel-topology-reconcile-explainer.html  01-channel-topology-reconcile.html  02-bus-decouple-and-islands-explainer.html  02-bus-decouple-and-islands.html  03-auth-on-the-bus-explainer.html  03-auth-on-the-bus.html  04-passkey-first-identity-explainer.html  04-passkey-first-identity.html  05-social-recovery-explainer.html  05-social-recovery.html  06-identity-and-trust-explainer.html  06-identity-and-trust.md
docs/reference/: aiko-mental-model.html  bus-interaction-contract.md
e2e/: test_bus_roundtrip.py
spike/: auth_check.py  devstack.sh  mosquitto.conf  probe_channel_list.py  probe_restart_removes.py  run_spike.sh  spike.py  ws_check.py
src/aiko_gateway/: __init__.py  config.py  db.py  main.py  middleware.py  migrate.py
src/aiko_gateway/aiko/: __init__.py  client.py  payload.py  topology.py
src/aiko_gateway/domain/: __init__.py  accounts_service.py  acl.py  channels_service.py  communities_service.py  devices_service.py  echo.py  handoff_service.py  ids.py  memberships_service.py  messages_service.py  models.py  moderation_service.py  nonce_service.py  oauth.py  oauth_broker.py  passkey_service.py  peers_service.py  pkce.py  rate_limit.py  recovery_service.py  security.py  signing.py  signing_keys_service.py  state_service.py  users_service.py
src/aiko_gateway/legal/: privacy.html  terms.html
src/aiko_gateway/realtime/: __init__.py  envelopes.py  hub.py  ws.py
src/aiko_gateway/rest/: __init__.py  auth.py  channels.py  communities.py  deps.py  devices.py  gateways.py  islands.py  keys.py  legal.py  members.py  messages.py  moderation.py  recovery.py  well_known.py
tests/: conftest.py  test_account_deletion.py  test_account_deletion_cascade_guard.py  test_channels_reconcile.py  test_check_constraints.py  test_communities_b1_migration.py  test_communities_b2.py  test_communities_b2_migration.py  test_config.py  test_devices.py  test_gateways_directory.py  test_get_history.py  test_islands_directory.py  test_legal_routes.py  test_main_routes.py  test_membership_acl.py  test_membership_concurrency.py  test_membership_management.py  test_message_signing_carriage.py  test_migrations.py  test_moderation.py  test_nonce_service.py  test_oauth_broker.py  test_oauth_verify.py  test_oauth_verify_logging.py  test_passkey_endpoints.py  test_passkey_logging.py  test_passkey_service.py  test_rate_limit.py  test_recovery.py  test_register_gate.py  test_request_size.py  test_rest_auth.py  test_schema_guard.py  test_signing_keys.py  test_social_signin.py  test_subscribe_fence.py
