[project]
name = "aiko_chat_gateway"
version = "0.0.1"
description = "Self-hosted gateway: stable WSS+REST contract over the aiko_chat MQTT backbone"
# aiko_services 0.6 caps at <=3.13.0 (verified in Phase 0 spike) -> target 3.12.
requires-python = ">=3.12,<3.13"

dependencies = [
  # aiko_services + aiko_chat are installed editable from the local checkouts
  # (see ReadMe); not on PyPI under a 3.12-compatible pin here.
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic-settings>=2.6",
  # The persistence/ORM layer (db.py, domain.models, realtime.ws, main.py). The
  # [asyncio] extra pulls greenlet for the async engine the tests drive over
  # aiosqlite. Was installed transitively in local venvs but never declared —
  # CI on a clean checkout needs it explicit.
  "sqlalchemy[asyncio]>=2.0",
  # The production Postgres driver. db.py builds the module-level async engine
  # at import time from the default `postgresql+asyncpg://` URL, so importing the
  # package (which the tests do, for Base) requires the asyncpg dialect — even
  # though the tests themselves run over aiosqlite. Also transitively-installed-
  # but-undeclared until now.
  "asyncpg>=0.30",
  # JWT auth (domain.security / rest.auth issue + verify access tokens). The
  # `jwt` module is PyJWT. Same transitively-installed-but-undeclared gap.
  "pyjwt>=2.0",
  # argon2id password hashing (domain.security). The `argon2` module is provided
  # by argon2-cffi. Last of the transitively-installed-but-undeclared core deps.
  "argon2-cffi>=23.0",
  # Async SQLite driver. As of the HyperSpace-source-of-truth redesign (#1281),
  # the gateway's LOCAL store (messages/auth/ACL — the data HyperSpace cannot
  # hold) is file-backed SQLite, not Postgres, so aiosqlite is a PRODUCTION
  # dependency, not merely the test driver. db.py builds the async engine from
  # DB_URL at import time; a `sqlite+aiosqlite://` URL needs this dialect present.
  "aiosqlite>=0.20",
  # Social sign-in (#13): verifying Apple/Google ID tokens. PyJWT can read an
  # RS256 token's structure on its own, but verifying the asymmetric signature
  # needs the `cryptography` backend (RSAAlgorithm.from_jwk + RS256 verify).
  # Was transitively present in local venvs (PyJWT[crypto]) but never declared.
  "cryptography>=43.0",
  # Social sign-in (#13): runtime async fetch of the provider JWKS (Apple/Google
  # publish their signing keys at a well-known URL). Was DEV-only (the test ASGI
  # client) — promoted to MAIN because the OAuth verifier fetches JWKS at runtime.
  "httpx>=0.27",
  # WebAuthn passkeys (#1471): py_webauthn (Duo) generates registration/
  # authentication options and verifies attestation/assertion responses against
  # the stored COSE public key + sign_count. A MAIN dep — the verify runs in the
  # /v1/auth/passkey/*/finish request path (pure local crypto, no network). We do
  # NOT hand-roll attestation/assertion verification (the security boundary).
  "webauthn>=2.0",
  # Schema migrations (#14). Alembic is the SOLE schema authority for real DBs:
  # the container entrypoint runs `aiko_gateway.migrate` (upgrade head) before
  # uvicorn. A MAIN (not dev) dep because it runs at every prod boot, not just
  # in tests. env.py drives it over the async engine (aiosqlite/asyncpg).
  "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
  # pytest pinned to 8.3.x: aiko_services 0.6 caps at pytest~=8.3.4, and
  # pytest-asyncio 0.24.x is the line compatible with that (1.x needs pytest>=8.4).
  "pytest~=8.3.4",
  "pytest-asyncio~=0.24.0",
  # httpx is now a MAIN dependency (runtime JWKS fetch) — it remains the test
  # ASGI transport too, but no longer needs declaring here.
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiko_gateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
